Added a new model

--- a/src/main/resources/static/briefAnalysis.html
+++ b/src/main/resources/static/briefAnalysis.html
@@ -115,6 +115,7 @@
            background-color: #2563EB;
        }
        .progress-bar-bg {
+       display:none
            background-color: #334155;
        }
        .progress-bar {
@@ -315,11 +316,11 @@
   <div class="mb-3">
     <label for="brief" class="block text-sm font-medium text-slate-300 mb-2">Brief</label>
     <textarea value="Employer: BrightStar Manufacturing Ltd., Ikeja, Lagos
-Years of Service: 7 years (January 2018 – March 2025)
+Years of Service: 7 years (January 2018 ï¿½ March 2025)
 Summary of Events:
 I was employed as a Senior Accountant with BrightStar Manufacturing Ltd. for over seven years. On the 14th of March 2025, I was summoned to the HR office and informed that my services were no longer required. I was told to submit my company laptop and access card immediately and leave the premises. No reason was given for the termination, and I was not given any prior notice.
 
-My salary for February 2025 has not been paid, and I have not received any termination letter. I am also owed three months’ unpaid leave allowance for 2023 and 2024.
+My salary for February 2025 has not been paid, and I have not received any termination letter. I am also owed three monthsï¿½ unpaid leave allowance for 2023 and 2024.
 
 I believe my dismissal was wrongful because I have not been involved in any misconduct and I have consistently met my performance targets. I suspect this action may be linked to my refusal to approve certain questionable financial transactions requested by my supervisor earlier this year." id="brief" name="brief" class="form-input w-full px-4 py-3 rounded-lg border pr-12" placeholder="Brief" required></textarea>
   </div>
