Added the forms to the app

--- a/src/main/resources/static/briefAnalysis.html
+++ b/src/main/resources/static/briefAnalysis.html
@@ -173,9 +173,9 @@
                 </button>
 
                 <div class="submenu mt-1 ml-10" id="Case Manager-submenu" style="max-height: 0px;">
-                    <a href="/processes/caseManager" class="block py-2 px-3 rounded-lg transition-all duration-200 text-sm opacity-0">Case Manager</a>
-                    <a href="/tasks/caseManager" class="block py-2 px-3 rounded-lg transition-all duration-200 text-sm opacity-0">Tasks</a>
-                    <a href="/forms/caseManager" class="block py-2 px-3 rounded-lg transition-all duration-200 text-sm opacity-0">Manage Forms</a>
+                    <a href="/processes/softwareEngineeringProcess" class="block py-2 px-3 rounded-lg transition-all duration-200 text-sm opacity-0">Case Manager</a>
+                    <a href="/tasks/softwareEngineeringProcess" class="block py-2 px-3 rounded-lg transition-all duration-200 text-sm opacity-0">Tasks</a>
+                    <a href="/forms/softwareEngineeringProcess" class="block py-2 px-3 rounded-lg transition-all duration-200 text-sm opacity-0">Manage Forms</a>
                 </div>
             </div>
             <div>
