--- a/src/main/resources/forms/FormTask_12-softwareEngineeringProcess.html
+++ b/src/main/resources/forms/FormTask_12-softwareEngineeringProcess.html
@@ -1,26 +1,172 @@
-<form id="formContainer" th:action="@{http://localhost:9010/tasks/complete}" th:object="${formData}" method="post" hx-post="http://localhost:9010/tasks/complete" hx-target="#formContainer" hx-swap="outerHTML" hx-on:htmx:before-request="this.querySelector('button[type=submit]').disabled = true; this.querySelector('button[type=submit]').innerHTML = 'Processing...'">
+<form id="formContainer" th:action="@{http://localhost:9010/tasks/complete}" th:object="${formData}" method="post"
+      hx-post="http://localhost:9010/tasks/complete" hx-target="#formContainer" hx-swap="outerHTML"
+      hx-on:htmx:before-request="this.querySelector('button[type=submit]').disabled = true; this.querySelector('button[type=submit]').innerHTML = 'Processing...'"
+      class="max-w-4xl mx-auto p-6 bg-gradient-to-br from-slate-50 to-slate-100 dark:from-slate-800 dark:to-slate-900 rounded-xl shadow-lg">
+
     <input type="hidden" th:value="${id}" id="id" name="id">
     <input type="hidden" value="FormTask_12" id="nextPage" name="nextPage">
-    <div class="mb-3">
-        <label for="requirement" class="block text-sm font-medium text-slate-300 mb-2">Requirement</label>
-        <textarea style="min-height:250px" th:text="${requirement}" id="requirement" name="requirement" class="form-input w-full px-4 py-3 rounded-lg border pr-12" placeholder="Requirement" required></textarea>
+
+    <!-- Header Section -->
+    <div class="mb-8 text-center">
+        <h1 class="text-3xl font-bold text-slate-800 dark:text-white mb-2">Document Requirements Review</h1>
+        <p class="text-slate-600 dark:text-slate-300">Review and edit the requirement document below</p>
     </div>
 
-    <div class="mb-3">
-        <label for="followupQuestions" class="block text-sm font-medium text-slate-300 mb-2">Followup Questions</label>
-        <ul style="margin-top:1px;margin-bottom:1px" class="w-full px-4 py-3 rounded-lg border bg-slate-50 dark:bg-slate-800 text-slate-700 dark:text-slate-300 space-y-2 list-disc list-inside">
-            <li th:each="question : ${aiRequirementAnalysis.followUpQuestions}" th:text="${question}"></li>
-        </ul>
+    <!-- Requirement Document Section - Now Editable -->
+    <div class="mb-8 bg-white dark:bg-slate-800 rounded-xl shadow-md overflow-hidden">
+        <div class="bg-gradient-to-r from-blue-600 to-blue-800 px-6 py-4 flex justify-between items-center">
+            <h2 class="text-xl font-semibold text-white">Requirement Document</h2>
+            <button type="button" id="toggleViewBtn" class="text-blue-100 hover:text-white text-sm font-medium flex items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+                </svg>
+                Edit Mode
+            </button>
+        </div>
+
+        <!-- Display View (Read-only) -->
+        <div id="requirementDisplay" class="p-6 max-h-96 overflow-y-auto document-content">
+            <div th:utext="${requirement}"></div>
+        </div>
+
+        <!-- Edit View (Textarea for editing) -->
+        <div id="requirementEdit" class="hidden p-4">
+            <textarea id="requirement" name="requirement"
+                      class="w-full h-96 p-4 border border-slate-300 rounded-lg font-mono text-sm"
+                      th:text="${requirement}" required></textarea>
+            <p class="text-sm text-slate-500 mt-2">Edit the requirement document as needed. HTML tags are supported.</p>
+        </div>
     </div>
 
-    <div class="mb-3">
-        <label for="reasons" class="block text-sm font-medium text-slate-300 mb-2">Reasons</label>
-        <ul style="margin-top:1px;margin-bottom:1px" class="w-full px-4 py-3 rounded-lg border bg-slate-50 dark:bg-slate-800 text-slate-700 dark:text-slate-300 space-y-2 list-disc list-inside">
-            <li th:each="reasons : ${aiRequirementAnalysis.reasons}" th:text="${reasons}"></li>
-        </ul>
+    <!-- Follow-up Questions Section -->
+    <div class="mb-8 bg-white dark:bg-slate-800 rounded-xl shadow-md overflow-hidden">
+        <div class="bg-gradient-to-r from-purple-600 to-purple-800 px-6 py-4">
+            <h2 class="text-xl font-semibold text-white">Follow-up Questions</h2>
+        </div>
+        <div class="p-6">
+            <ul class="space-y-3">
+                <li th:each="question : ${aiRequirementAnalysis.followUpQuestions}"
+                    class="flex items-start">
+                    <span class="flex-shrink-0 w-5 h-5 mt-1 mr-3 text-purple-600 dark:text-purple-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                        </svg>
+                    </span>
+                    <span class="text-slate-700 dark:text-slate-300" th:text="${question}"></span>
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <button type="submit" class="flex items-center bg-blue-600 hover:bg-blue-700 text-white font-medium py-2.5 px-6 rounded-lg transition-colors duration-200">
-        Complete
-    </button>
+    <!-- Reasons Section -->
+    <div class="mb-8 bg-white dark:bg-slate-800 rounded-xl shadow-md overflow-hidden">
+        <div class="bg-gradient-to-r from-emerald-600 to-emerald-800 px-6 py-4">
+            <h2 class="text-xl font-semibold text-white">Analysis Reasons</h2>
+        </div>
+        <div class="p-6">
+            <ul class="space-y-3">
+                <li th:each="reason : ${aiRequirementAnalysis.reasons}"
+                    class="flex items-start">
+                    <span class="flex-shrink-0 w-5 h-5 mt-1 mr-3 text-emerald-600 dark:text-emerald-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                        </svg>
+                    </span>
+                    <span class="text-slate-700 dark:text-slate-300" th:text="${reason}"></span>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Submit Button -->
+    <div class="text-center">
+        <button type="submit"
+                class="px-8 py-3 bg-gradient-to-r from-blue-600 to-blue-800 hover:from-blue-700 hover:to-blue-900 text-white font-semibold rounded-lg shadow-md transition-all duration-200 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+            Complete Review
+        </button>
+    </div>
+
+    <!-- Toggle between view and edit mode JavaScript -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const toggleBtn = document.getElementById('toggleViewBtn');
+            const displayView = document.getElementById('requirementDisplay');
+            const editView = document.getElementById('requirementEdit');
+
+            toggleBtn.addEventListener('click', function() {
+                if (displayView.classList.contains('hidden')) {
+                    // Switching to view mode
+                    displayView.classList.remove('hidden');
+                    editView.classList.add('hidden');
+                    toggleBtn.innerHTML = `
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+                        </svg>
+                        Edit Mode
+                    `;
+                } else {
+                    // Switching to edit mode
+                    displayView.classList.add('hidden');
+                    editView.classList.remove('hidden');
+                    toggleBtn.innerHTML = `
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+                        </svg>
+                        View Mode
+                    `;
+                }
+            });
+        });
+    </script>
+
+    <!-- Custom Styles for Document Content -->
+    <style>
+        .document-content {
+            font-family: 'Inter', system-ui, sans-serif;
+            line-height: 1.6;
+            color: #374151;
+        }
+        .document-content section {
+            margin-bottom: 1.5rem;
+        }
+        .document-content header {
+            font-weight: 700;
+            font-size: 1.25rem;
+            margin-bottom: 0.75rem;
+            color: #1e40af;
+            border-bottom: 2px solid #e5e7eb;
+            padding-bottom: 0.5rem;
+        }
+        .document-content article {
+            margin-bottom: 1.25rem;
+        }
+        .document-content article header {
+            font-size: 1.1rem;
+            color: #374151;
+            border-bottom: 1px dashed #e5e7eb;
+        }
+        .document-content ul {
+            list-style-type: disc;
+            padding-left: 1.5rem;
+            margin: 0.5rem 0;
+        }
+        .document-content li {
+            margin-bottom: 0.25rem;
+        }
+        .document-content p {
+            margin-bottom: 0.75rem;
+        }
+        .dark .document-content {
+            color: #e5e7eb;
+        }
+        .dark .document-content header {
+            color: #93c5fd;
+            border-bottom-color: #4b5563;
+        }
+        .dark .document-content article header {
+            color: #d1d5db;
+            border-bottom-color: #4b5563;
+        }
+    </style>
 </form>
